# simple_translator

./: .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  MenuBar.cpp  MenuBar.h  QueryWorker.h  main_ui.cpp  menubar.h  queryworker.h
client/test/: test.cpp
common/: BlockingQueue.h  CMakeLists.txt  Timer.h  config_exampe.json
server/: CMakeLists.txt  Makefile  Poller.cpp  Poller.h  TcpServer.cpp  TcpServer.h  Translator.cpp  Translator.h  server.cpp  translator.cpp  translator.h
server/test/: Makefile  client.cpp  test.cpp
